add new font to body

--- a/styles/base.css
+++ b/styles/base.css
@@ -3,6 +3,7 @@
 body {
   background:black;
   color: yellow;
+  font-family: 'PT Serif', serif;
   font-weight: 300;
   font-size: 16px;
   letter-spacing: .025rem;
