--- a/styles/base.css
+++ b/styles/base.css
@@ -73,6 +73,8 @@ iframe {
 .banner {
   min-height: 25vh;
   padding: 5rem 1rem;
+  background-image:url('../Website banner.webp');
+  background-position: center;
 }
 
 
