--- a/styles/base.css
+++ b/styles/base.css
@@ -75,6 +75,7 @@ iframe {
   padding: 5rem 1rem;
   background-image:url('../Website banner.webp');
   background-position: center;
+  background-repeat: no-repeat;
 }
 
 
