--- a/styles/base.css
+++ b/styles/base.css
@@ -76,6 +76,7 @@ iframe {
   background-image:url('../Website banner.webp');
   background-position: center;
   background-repeat: no-repeat;
+  object-fit: cover;
 }
 
 
