--- a/styles/base.css
+++ b/styles/base.css
@@ -73,7 +73,7 @@ iframe {
 .banner {
   min-height: 25vh;
   padding: 5rem 1rem;
-  background-image:url('../Website banner.webp');
+  background-image:url('../pexels-photo-1230976.webp');
   background-position: center;
   background-repeat: no-repeat;
   object-fit: cover;
